Add Swagger JTW Token Auth info
